# yangble5

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PENDING_FIX.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  ip-allowlist.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
byok/: README.md  __init__.py  config.template.yaml  setup.py
deploy/: .env.example  AAPANEL.md  Caddyfile  Dockerfile.caddy  Dockerfile.engine  Dockerfile.gateway  GO_LIVE.md  README.md  cloudflare.md  docker-compose.behind-proxy.yml  docker-compose.yml  harden.sh  install.sh  preflight.sh  runbook.md  smoke_test.sh
deploy/caddy/conf.d/: README.md  tls-cloudflare.conf.example
deploy/engine/: config.example.yaml
deploy/engine-bin/: README.md
deploy/fail2ban/filter.d/: yangble5-auth.conf
deploy/fail2ban/jail.d/: yangble5.local.tmpl
deploy/nginx/: recompute-csp-hashes.sh  security-headers.conf  static-content-type.conf  yangble5.com.conf.example
docs/: AGENT_INTERVIEW.md  BENCHMARK.md  FINDINGS.md  OPERATING_A_PUBLIC_SERVICE.md  REPO_METADATA.md  UPGRADING_ENGINE.md
docs/diagrams/: architecture.md  cache-lifecycle.md
docs/evidence/: claude-code-e2e.md
docs/launch/: FAQ_HARD_QUESTIONS.md  comparison.md  hn.md  ptt-threads.md  reddit.md  x-thread.md
gateway/: .env.example  __init__.py  app.py  byok.py  config.py  ratelimit.py  requirements.txt  storage.py  upstream.py  usage.py
scripts/: make_history.sh
site/: AGENTS.md  README.md  index.html  install.ps1  install.ps1.sha256  install.sh  install.sh.sha256  llms.txt  robots.txt  sitemap.xml  uninstall.ps1  uninstall.ps1.sha256  uninstall.sh  uninstall.sh.sha256  verify.html
site/.well-known/: security.txt
tests/: conftest.py  test_byok_setup.py  test_cache_bench.py  test_cache_stats_sidecar.py  test_claude_shim.py  test_deploy_env_completeness.py  test_deploy_security_headers.py  test_deploy_static_content_type.py  test_gateway.py  test_gateway_agent_contract.py  test_gateway_shared_pool_limits.py  test_generated_launchers.py  test_installer_consent.py  test_installer_validation.py  test_launcher_line_invariant.py  test_site_agent_install_path.py  test_sitecheck.py  test_smoke_test_helpers.py  test_tools_are_stdlib_only.py
tools/: __init__.py  cache_bench.py  cache_stats_sidecar.py  claude_shim.py  drift_check.py  sitecheck.py
